assets/css/scss/templates/_no-sidebar.scss
/* ==========================================================================
  #NO-SIDEBAR TEMPLATE
  ========================================================================== */

@media screen and (min-width: 45em) {
	.-no-sidebar .entry-content .full-bleed-img {
		left: 50%;
		transform: translateX(-50%);
		width: calc(100vw - 2.8rem);
	}
}

@media screen and (min-width: 80em) {
	@include line-height-and-spaces(1.5);
	.-no-sidebar .-large-portrait-featured-image-template .entry-header figure {
		@include visible-for-screenreaders;
	}

	.-no-sidebar .-large-portrait-featured-image-template {
		display: flex;
		align-items: center;
	}

	.-no-sidebar .-large-portrait-featured-image-template > figure {
		display: block;
	}

	.-no-sidebar .-large-portrait-featured-image-template > figure .wp-post-image {
		margin-right: 0;
	}

	.-no-sidebar .-large-portrait-featured-image-template > div {
		float: right;
		padding-left: add-unit($space);
		width: 50%;
	}

	.-no-sidebar .-large-portrait-featured-image-template .post-thumbnail {
		float: left;
		margin-top: .6em;
		max-width: 50%;
		@include padding-left-and-right($space);
		text-align: right;
		width: 50%;
	}

	.-no-sidebar .-large-portrait-featured-image-template .entry-header > div,
	.-no-sidebar .-large-portrait-featured-image-template .entry-content,
	.-no-sidebar .-large-portrait-featured-image-template .entry-footer {
		margin-left: 0;
		max-width: 800px;
		padding-left: 0;
	}

	@include line-height-and-spaces(1.4);
}

